k8/ugonnawin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ugonnawin-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ugonnawin
---
