k8/ugonnawin.yaml
apiVersion: v1
kind: Service
metadata:
  name: ugonnawin-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ugonnawin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ugonnawin
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: ugonnawin
  template:
    metadata:
      labels:
        app: ugonnawin
    spec:
      containers:
      - name: ugonnawin
        image: oze4/ugonnawin-slash-commands:latest
        ports:
        - containerPort: 80  
---
